# AegisDesk

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  HF_ARTICLE_DRAFT.md  HF_BLOG.md  PROJECT_WALKTHROUGH.md  README.md  RESULTS.md  ROUND1_DESIGN_DOC.md  ROUND2_SLIDE_DECK.md  SUBMISSION_OVERVIEW.md  __init__.py  client.py  compat.py  design_doc.md  env_doctor.py  inference.py  measure_latency.py  models.py  oracle_demo.py  oracle_tools.py  pyproject.toml  requirements.txt  roadmap.md  run.ps1  run_local_stack.py  submission_audit.py  validate-submission.ps1  validate-submission.sh  verify_space.py
scripts/: fetch_real_datasets.py  generate_fixtures.py  run_benchmark_eval.py
server/: __init__.py  app.py  environment.py  fixtures.py  grader.py  reward.py  world_state.py
server/agents/: customer_sim.py  quality_review.py
tests/: test_app_smoke.py  test_env_doctor.py  test_environment.py  test_graders.py  test_inference_contract.py  test_oracle_demo.py  test_oracle_tools.py  test_run_local_stack.py  test_submission_audit.py  test_training_workflow.py  test_verify_space.py
training/: AegisDesk_Kaggle_GRPO.ipynb  AegisDesk_Kaggle_GRPO_fixed.ipynb  AegisDesk_Training.ipynb  HF_JOBS_RUNBOOK.md  README.md  __init__.py  adaptive_scheduler.py  benchmark_results.json  check_training_readiness.py  dpo_pair_generator.py  kaggle_grpo_helpers.py  plot_benchmark_results.py  readiness_report.json  self_improve.py  strongest_submission.py  support_rl_manifest.json  train_grpo_aegisdesk.py  train_unsloth_dpo.py  train_unsloth_sft.py  trajectory_harvester.py
(+53 files in other folders)
